<resources>
    <string name="google_app_id">970204178053</string>
    <string name="app_name">Sender</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_account">Add Account</string>
    <string name="action_remove_accounts">Remove Account</string>
    <string name="action_show_accounts">Show Accounts</string>
    <string name="action_show_barcode">Show Barcode</string>
    <string name="action_show_layers">Show Layers</string>
    <string name="action_logout">Logout</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_maps">Map</string>

    <!-- Login Activity -->
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_new_user">Forgot your password? <font color="#1fb6ed">Click here</font> to reset!</string>
    <string name="label_register">Register for account?</string>

    <!-- Barcode Scanner Activity -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <!-- Account List Activity -->
    <string name="user_column">User</string>
    <string name="error_loading_users">Loading users failed</string>
    <string name="no_users">No Users</string>
    <string name="avatar">Avatar</string>
    <string name="tv_holder">Anton Foltz</string>

</resources>
